--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 .jumbotron{
-    background: linear-gradient(to left, #929292, #e0e0e0)
+    background: linear-gradient(to left, #929292, #e0e0e0);
 }
 
 .modal-body{
@@ -10,6 +10,10 @@
     padding: 35px 50px;
 }
 
-.modal-footer{
-    padding:
+th, td{
+    text-align: center;
+}
+
+body{
+    font-family: "Comic Sans MS";
 }
